--- a/make.conf
+++ b/make.conf
@@ -22,8 +22,6 @@ LC_MESSAGES=C
 
 GRUB_PLATFORMS="efi-64"
 
-GENTOO_MIRRORS="https://mirrors.sjtug.sjtu.edu.cn/gentoo https://mirrors.tuna.tsinghua.edu.cn/gentoo/"
-
 VIDEO_CARDS="nvidia"
 
 USE="cjk cuda samba -ibus -ipv6 -nls"
@@ -38,3 +36,6 @@ ACCEPT_LICENSE="*"
 
 FEATURES="ccache"
 CCACHE_DIR="/var/cache/ccache"
+
+GENTOO_MIRRORS="https://mirrors.bfsu.edu.cn/gentoo"
+ACCEPT_KEYWORDS="~amd64"
